# polymarket-auto-trader

./: .dockerignore  Dockerfile  README.md  pyproject.toml
polytrader/: __init__.py  cli.py  runner.py  settings.py
polytrader/adapters/: exchange.py  paper.py  polymarket_public.py
polytrader/config/: locations.example.json
polytrader/core/: recorders.py  risk.py  strategy.py  types.py
polytrader/models/: btc_15m.py  btc_threshold.py  btc_updown_interval.py  crypto_signals.py  fair_value.py  router.py  sports_signals.py  weather.py
polytrader/sources/: __init__.py  binance.py  chainlink_streams.py  coingecko.py  coingecko_marketchart.py  defillama.py  espn.py  feargreed.py  nws.py
polytrader/storage/: sqlite.py
scripts/: simulate_btc_updown.py
