[project]
name = "polytrader"
version = "0.1.0"
description = "Paper trading + pluggable execution framework for a Polymarket-style prediction market trader."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "tenacity>=8.2.3",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
polytrader = "polytrader.cli:app"

[tool.ruff]
line-length = 110
